--- a/Youth Soccer League Project/contact.html
+++ b/Youth Soccer League Project/contact.html
@@ -4,22 +4,23 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> NYSL</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-
     <header>
         <div class="Logo-Container">
-         <h1 class="title">Northside Youth Soccer League</h1>
+         <h3 class="title">Northside Youth Soccer League</h3>
         <div class="sub-title">
-            <h2>Upcoming events</h2>
+            <h4>Upcoming events</h4>
         </div>
             <div class="logo">
             <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
         </div>
         </div>
     </header>
+
     <aside>
         <nav class="menu">
             <a href="./home.html">Home</a>
@@ -27,16 +28,16 @@
             <a class="active" href="./contact.html">Contact</a>
             <a href="./gameinfo.html">Game Info</a>
             <a href="./rules.html">Rules &amp; Policies</a>
-              <a href="registration.html">Registration Form</a>
-            
-        
+             <a href="registration.html">Registration Form</a>
+
+
         </nav>
     </aside>
-    <main>
-        <p class="bold">Email</p>
+    <main class="contact">
+        <p class="bold flow-text">Email</p>
         <p class="tab">Feel free to email us at: <a href="mailto:Nysl@chisoccer.org">Nysl@chisoccer.org</a> </p>
         <p class="tab">We will reply to your email as soon as we can.</p>
-        <p class="bold">Phone</p>
+        <p class="bold flow-text">Phone</p>
         <p class="tab">You may call us directly at (773)555-8984.</p>
         <p class="tab">As we are staffed mostly by volunteers, there is a good chance your call will not be picked up immediately. We recommend email as the preffered way of contacting us, but you may also leave us a brief voicemail with your name, number, and reason for calling and we will return your call.</p>
     </main>
