--- a/Youth Soccer League Project/registration.html
+++ b/Youth Soccer League Project/registration.html
@@ -4,22 +4,23 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> NYSL</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-
     <header>
         <div class="Logo-Container">
-         <h1 class="title">Northside Youth Soccer League</h1>
+         <h3 class="title">Northside Youth Soccer League</h3>
         <div class="sub-title">
-            <h2>Upcoming events</h2>
+            <h4>Upcoming events</h4>
         </div>
             <div class="logo">
             <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
         </div>
         </div>
     </header>
+
     <aside>
         <nav class="menu">
             <a href="./home.html">Home</a>
@@ -28,15 +29,10 @@
             <a href="./gameinfo.html">Game Info</a>
             <a href="./rules.html">Rules &amp; Policies</a>
             <a class="active" href="registration.html">Registration Form</a>
-
-
-        </nav>
+         </nav>
     </aside>
 
     <main>
-
-
-
         <form action="/show_data.html" method="get">
 
             <div class="Container">
@@ -72,9 +68,6 @@
                     <label for="E-mail">Email</label>
                     <input type="email" id="E-mail" name="E-mail" placeholder="email">
                 </div>
-
-
-
 
                 <p>Which elementary schools do you live near?</p>
 
@@ -133,7 +126,7 @@
                 </div>
                <p>Shorts Size:</p>
                     <div class="Short-Size">
-                    
+
                     <div> <input type="checkbox" name="ShortSize" value="Youth Small"> Youth Small</div>
                     <div> <input type="checkbox" name="ShortSize" value="Youth Medium"> Youth Medium</div>
                     <div> <input type="checkbox" name="ShortSize" value="Youth Large"> Youth Large</div>
@@ -146,7 +139,7 @@
                 <div class="Permission">
                     <h4>Permision To Play</h4>
                     <hr>
-         <div class="text">        
+         <div class="text">
                      I, the parent or guardian of the minor registrant, agree that the registrant and I will abide by all the rules of the Northside Youth
                     Soccer League (NYSL). In recognizing the possibility of physical injury associated with soccer and in consideration for the “League”
                     accepting the registrant for its soccer programs and activities, I hereby release, discharge, and/or otherwise indemnify NYSL, their
@@ -155,7 +148,7 @@
                     sponsored activities, which transportation.
                     By signing below, I hereby agree and authorize the above. In addition, by signing below, I also acknowledge that I have read the
                     cancellation policy and agree to its terms.
-               </div> 
+               </div>
                  </div>
 
                 <div class="Agree">
