--- a/Youth Soccer League Project/rules.html
+++ b/Youth Soccer League Project/rules.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en">
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> NYSL</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
     <header>
         <div class="Logo-Container">
-         <h1 class="title">Northside Youth Soccer League</h1>
-        <div class="sub-title">
-            <h2>Upcoming events</h2>
+         <h3 class="title">Northside Youth Soccer League</h3>
+
+         <div class="sub-title">
+            <h4>Upcoming events</h4>
         </div>
             <div class="logo">
             <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
@@ -17,6 +20,7 @@
         </div>
     </header>
     <aside>
+
         <nav class="menu">
             <a href="./home.html">Home</a>
             <a href="./about.html">About NYSL</a>
@@ -24,12 +28,13 @@
             <a href="./gameinfo.html">Game Info</a>
             <a class="active" href="./rules.html">Rules &amp; Policies</a>
               <a href="registration.html">Registration Form</a>
-            
+
         </nav>
+
     </aside>
-    <main>
+    <main class="rules">
         <p class='italic'> * FIFA rules shall govern NYSL play except as modified herein.</p>
-        <p class='bold'>SPORTSMANSHIP</p>
+        <p class='bold flow-text'>SPORTSMANSHIP</p>
         <ul>
             <li>
                 The common interest that members of the Association share is to inspire
@@ -41,9 +46,9 @@
         </ul>
 
 
-        <p class='bold'>FIFA FIELD REGULATIONS</p>
+        <p class='bold flow-text'>FIFA FIELD REGULATIONS</p>
         <ol>
-            <li><span class='bold'>DIMENSIONS.</span> FIFA Law 1 provides for flexible external field dimensions
+            <li><span class='bold '>DIMENSIONS.</span> FIFA Law 1 provides for flexible external field dimensions
                 within a given maximum and minimum width and length. These
                 dimensions should be adhered to for all fields used by teams under 12
                 and older.</li>
@@ -122,7 +127,7 @@
 
             </li>
         </ol>
-        <p class='bold'>
+        <p class='bold flow-text'>
             EQUIPMENT</p>
         <ul>
             <li>We will abide by and accept equipment standards as defined by FIFA,
@@ -146,7 +151,7 @@
                 the playing area are low are strongly encouraged to play small-sided
                 games on reduced field size.</li>
         </ul>
-        <p class='bold'>SUBSTITUTIONS</p>
+        <p class='bold flow-text'>SUBSTITUTIONS</p>
         <ul>
             <li>
                 Teams may make an unlimited number of substitutions at the times
@@ -163,7 +168,7 @@
                 </ol>
             </li>
         </ul>
-        <p class='bold'>CONFISCATED PLAYER PASSES</p>
+        <span class='bold flow-text'>CONFISCATED PLAYER PASSES</span>
         <ul>
             <li>Passes of any individual(s) ejected from any match shall be retained after
                 the match by the referee. The pass of any individual who has received a
@@ -178,7 +183,7 @@
                 deliver all confiscated passes to the UYSA State Office within forty-eight
                 (48) hours of the conclusion of the match.</li>
         </ul>
-        <p class='bold'>ALL-PLAY</p>
+        <p class='bold flow-text'>ALL-PLAY</p>
         <ul>
             <li>All-play means that every recreation player on every team shall play at
                 least fifty percent of each game. Coaches in the competition program are
@@ -191,13 +196,13 @@
                 </ul>
             </li>
         </ul>
-        <p class='bold'>PLAYER'S EQUIPMENT</p>
+        <p class='bold flow-text'>PLAYER'S EQUIPMENT</p>
         <ul>
             <li>Where the uniform colors of both teams are so similar that the referee
                 orders a change, the designated home team must change to colors
                 distinct from those of the opponent.</li>
         </ul>
-        <p class='bold'>MIXED TEAMS</p>
+        <p class='bold flow-text'>MIXED TEAMS</p>
         <ul>
             <li><span class='bold'>GIRLS PLAYING ON BOYS’ TEAMS.</span> Girls are eligible to play on boys’
                 4
@@ -223,7 +228,7 @@
                         incite, in any manner, disruptive behavior of any kind.</li>
                 </ol>
         </ul>
-        <p class='bold'>GAME TERMINATION</p>
+        <p class='bold flow-text'>GAME TERMINATION</p>
         <ul>
             <li>Any game terminated after 15 minutes into the second half by the referee
                 by reason of the elements, or by reason of grave disorder on the part of
@@ -232,7 +237,7 @@
                 ahead and the game is called because of their actions they will lose the
                 game 1-0.</li>
         </ul>
-        <p class='bold'>CONDITIONS OF REPLAY OF GAMES</p>
+        <p class='bold flow-text'>CONDITIONS OF REPLAY OF GAMES</p>
         <ul>
             <li>Any game which is required to be replayed as a result of any protest or
                 appeal, shall be subject to the following conditions: <ol>
@@ -247,7 +252,7 @@
                 </ol>
             </li>
         </ul>
-        <p class='bold'>REFEREE RESPONSIBLITIES</p>
+        <p class='bold flow-text'>REFEREE RESPONSIBLITIES</p>
         <ul>
             <li>The referee shall verify the identity of the players and coaches with his/her
                 player pass. He shall collect the passes of those players and coaches who
@@ -270,5 +275,4 @@
                 Committee.</li>
         </ul>
     </main>
-    <footer> </footer>
 </body></html>
