--- a/Youth Soccer League Project/about.html
+++ b/Youth Soccer League Project/about.html
@@ -5,6 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> NYSL</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
@@ -12,16 +13,16 @@
 
     <header>
         <div class="Logo-Container">
-         <h1 class="title">Northside Youth Soccer League</h1>
+         <h3 class="title">Northside Youth Soccer League</h3>
         <div class="sub-title">
-            <h2>Upcoming events</h2>
+            <h4>Upcoming events</h4>
         </div>
             <div class="logo">
             <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
         </div>
         </div>
     </header>
-    <aside>     
+    <aside>
         <nav class="menu">
             <a href="./home.html">Home</a>
             <a class="active" href="./about.html">About NYSL</a>
@@ -32,18 +33,17 @@
         </nav>
     </aside>
     <main>
-      
-        <p class="bold">Mission</p>
+
+        <p class="bold flow-text">Mission</p>
         <p class="tab">To support young athletes living in Chicago's northside neighborhoods, who hve n interest in learning nd playing soccer, with opportunities to learn nd practice skills related to the game of soccer, specifically those skills around team cooperation and good sportmanship.</p>
 
-        <p class="bold">Vision</p>
+        <p class="bold flow-text">Vision</p>
         <p class="tab">The Northside Youth Soccer League aspires to develop strong, well-rounded, and mindful athletes through the building of character, self-discipline, and leadership.</p>
 
-        <p class="bold">General Informtion</p>
+        <p class="bold flow-text">General Informtion</p>
         <p class="tab">The Northside Youth Soccer League was established in 1996 to ptovide athletes residing in Chicgo's northside neighborhoods an environment in wich to learn and play soccer. To be a member of NYSL, you must be between the ages of 4-12 and reside in a Chicago northside neighborhood. NYSL is ran by a small full-time staff, and relies on the generous volunteer time of parents and previous league members.</p>
     </main>
-    <footer>
 
-    </footer>
 
-</body></html>
+</body>
+</html>
