--- a/Youth Soccer League Project/gameinfo.html
+++ b/Youth Soccer League Project/gameinfo.html
@@ -13,7 +13,7 @@
          <div class="Logo-Container">
          <h3 class="title">Northside Youth Soccer League</h3>
         <div class="sub-title">
-            <h4>Upcoming events</h4>
+            <h4>Game Info</h4>
         </div>
             <div class="logo">
             <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
@@ -33,15 +33,15 @@
     </aside>
 
     <main>
-    <h4>Fall Schedule</h4>
+    <span class="flow-text">Fall Schedule</span>
     <p class="italic">*All games take place on Saturday</p>
     <table>
         <tr>
-            <th><u>SEPTEMBER</u></th>
+            <th><span>SEPTEMBER</span></th>
 
-            <th><u>TEAMS</u></th>
-            <th><u>LOCATION</u></th>
-            <th><u>TIMES</u></th>
+            <th><span>TEAMS</span></th>
+            <th><span>LOCATION</span></th>
+            <th><span>TIMES</span></th>
         </tr>
 
         <tr>
@@ -81,10 +81,10 @@
 
     <table>
         <tr>
-            <th><u>OCTOBER</u></th>
-            <th><u>TEAMS</u></th>
-            <th><u>LOCATION</u></th>
-            <th><u>TIMES</u></th>
+            <th><span>OCTOBER</span></th>
+            <th><span>TEAMS</span></th>
+            <th><span>LOCATION</span></th>
+            <th><span>TIMES</span></th>
          </tr>
         <tr>
             <td>10/06</td>
@@ -115,7 +115,7 @@
 
        <table>
         <tr>
-            <th><u>Game Location</u></th>
+            <th><span>Game Location</span></th>
         </tr>
         <tr>
         <td>AJ Katzenmaier Elementary</td>
