--- a/Youth Soccer League Project/home.html
+++ b/Youth Soccer League Project/home.html
@@ -12,6 +12,7 @@
 
     <header>
        <div class="Logo-Container">
+
          <h3 class="title">Northside Youth Soccer League</h3>
         <div class="sub-title">
             <h4>Upcoming events</h4>
@@ -38,11 +39,11 @@
        <main>
        <div class="events">
            <h5>Upcoming Events</h5>
-         <p class="bold">August 4:</p>
+         <span class="bold">August 4:</span>
         <p class="tab">NYSL Fundraiser</p>
-        <p class="bold">August 16:</p>
+        <span class="bold">August 16:</span>
         <p class="tab"> Season Kick-Off: Meet the Teams</p>
-        <p class="bold">September 1:</p>
+        <span class="bold">September 1:</span>
         <p class="tab">First Game of the season(Check Game Schedule for details)</p>
     </div>
     </main>
