--- a/Youth Soccer League Project/rules.html
+++ b/Youth Soccer League Project/rules.html
@@ -12,7 +12,7 @@
          <h3 class="title">Northside Youth Soccer League</h3>
 
          <div class="sub-title">
-            <h4>Upcoming events</h4>
+            <h4>Rules & Policies</h4>
         </div>
             <div class="logo">
             <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
@@ -34,7 +34,7 @@
     </aside>
     <main class="rules">
         <p class='italic'> * FIFA rules shall govern NYSL play except as modified herein.</p>
-        <p class='bold flow-text'>SPORTSMANSHIP</p>
+        <span class='bold flow-text'>SPORTSMANSHIP</span>
         <ul>
             <li>
                 The common interest that members of the Association share is to inspire
@@ -46,7 +46,7 @@
         </ul>
 
 
-        <p class='bold flow-text'>FIFA FIELD REGULATIONS</p>
+        <span class='bold flow-text'>FIFA FIELD REGULATIONS</span>
         <ol>
             <li><span class='bold '>DIMENSIONS.</span> FIFA Law 1 provides for flexible external field dimensions
                 within a given maximum and minimum width and length. These
@@ -127,13 +127,13 @@
 
             </li>
         </ol>
-        <p class='bold flow-text'>
-            EQUIPMENT</p>
+        <span class='bold flow-text'>
+            EQUIPMENT</span>
         <ul>
             <li>We will abide by and accept equipment standards as defined by FIFA,
                 USSF and USYSA.</li>
         </ul>
-        <p class='bold'>NUMBER OF PLAYERS</p>
+        <span class='bold flow-text'>NUMBER OF PLAYERS</span>
         <ul>
             <li><span class='bold'>TEAM SIZE.</span> Except as noted below, team rosters shall consist of not less
                 than eleven nor more than eighteen players. A team must have at least
@@ -151,7 +151,7 @@
                 the playing area are low are strongly encouraged to play small-sided
                 games on reduced field size.</li>
         </ul>
-        <p class='bold flow-text'>SUBSTITUTIONS</p>
+        <span class='bold flow-text'>SUBSTITUTIONS</span>
         <ul>
             <li>
                 Teams may make an unlimited number of substitutions at the times
@@ -183,7 +183,7 @@
                 deliver all confiscated passes to the UYSA State Office within forty-eight
                 (48) hours of the conclusion of the match.</li>
         </ul>
-        <p class='bold flow-text'>ALL-PLAY</p>
+        <span class='bold flow-text'>ALL-PLAY</span>
         <ul>
             <li>All-play means that every recreation player on every team shall play at
                 least fifty percent of each game. Coaches in the competition program are
@@ -196,13 +196,13 @@
                 </ul>
             </li>
         </ul>
-        <p class='bold flow-text'>PLAYER'S EQUIPMENT</p>
+        <span class='bold flow-text'>PLAYER'S EQUIPMENT</span>
         <ul>
             <li>Where the uniform colors of both teams are so similar that the referee
                 orders a change, the designated home team must change to colors
                 distinct from those of the opponent.</li>
         </ul>
-        <p class='bold flow-text'>MIXED TEAMS</p>
+        <span class='bold flow-text'>MIXED TEAMS</span>
         <ul>
             <li><span class='bold'>GIRLS PLAYING ON BOYS’ TEAMS.</span> Girls are eligible to play on boys’
                 4
@@ -212,7 +212,7 @@
             <li><span class='bold'>TYPES OF TEAMS.</span>Teams with females only are Girls Teams. All others
                 are Boys Teams.</li>
         </ul>
-        <p class='bold'>COACHING FROM THE SIDELINES</p>
+        <span class='bold'>COACHING FROM THE SIDELINES</span>
         <ul>
             <li>Coaching from the sidelines, i.e., giving direction to one’s own team on
                 points of strategy and position, is permitted provided that:
@@ -228,7 +228,7 @@
                         incite, in any manner, disruptive behavior of any kind.</li>
                 </ol>
         </ul>
-        <p class='bold flow-text'>GAME TERMINATION</p>
+        <span class='bold flow-text'>GAME TERMINATION</span>
         <ul>
             <li>Any game terminated after 15 minutes into the second half by the referee
                 by reason of the elements, or by reason of grave disorder on the part of
@@ -237,7 +237,7 @@
                 ahead and the game is called because of their actions they will lose the
                 game 1-0.</li>
         </ul>
-        <p class='bold flow-text'>CONDITIONS OF REPLAY OF GAMES</p>
+        <span class='bold flow-text'>CONDITIONS OF REPLAY OF GAMES</span>
         <ul>
             <li>Any game which is required to be replayed as a result of any protest or
                 appeal, shall be subject to the following conditions: <ol>
@@ -245,14 +245,14 @@
                         suspended or protested game, unless otherwise agreed by the
                         coaches.</li>
                     <li>Impartial referees shall be assigned to the new game</li>
-                    <li><span class='bold'>The PROTEST AND APPEALS COMMITTEE</span>shall have the power
+                    <li>The PROTEST AND APPEALS COMMITTEEshall have the power
                         to impose such additional conditions on the replay of the game, as
                         it deems appropriate under the circumstances.
                     </li>
                 </ol>
             </li>
         </ul>
-        <p class='bold flow-text'>REFEREE RESPONSIBLITIES</p>
+        <span class='bold flow-text'>REFEREE RESPONSIBLITIES</span>
         <ul>
             <li>The referee shall verify the identity of the players and coaches with his/her
                 player pass. He shall collect the passes of those players and coaches who
