--- a/Youth Soccer League Project/about.html
+++ b/Youth Soccer League Project/about.html
@@ -15,7 +15,7 @@
         <div class="Logo-Container">
          <h3 class="title">Northside Youth Soccer League</h3>
         <div class="sub-title">
-            <h4>Upcoming events</h4>
+            <h4>About NYSL </h4>
         </div>
             <div class="logo">
             <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
@@ -34,13 +34,13 @@
     </aside>
     <main>
 
-        <p class="bold flow-text">Mission</p>
+        <span class="bold flow-text">Mission</span>
         <p class="tab">To support young athletes living in Chicago's northside neighborhoods, who hve n interest in learning nd playing soccer, with opportunities to learn nd practice skills related to the game of soccer, specifically those skills around team cooperation and good sportmanship.</p>
 
-        <p class="bold flow-text">Vision</p>
+        <span class="bold flow-text">Vision</span>
         <p class="tab">The Northside Youth Soccer League aspires to develop strong, well-rounded, and mindful athletes through the building of character, self-discipline, and leadership.</p>
 
-        <p class="bold flow-text">General Informtion</p>
+        <span class="bold flow-text">General Informtion</span>
         <p class="tab">The Northside Youth Soccer League was established in 1996 to ptovide athletes residing in Chicgo's northside neighborhoods an environment in wich to learn and play soccer. To be a member of NYSL, you must be between the ages of 4-12 and reside in a Chicago northside neighborhood. NYSL is ran by a small full-time staff, and relies on the generous volunteer time of parents and previous league members.</p>
     </main>
 
