--- a/Youth Soccer League Project/contact.html
+++ b/Youth Soccer League Project/contact.html
@@ -13,7 +13,7 @@
         <div class="Logo-Container">
          <h3 class="title">Northside Youth Soccer League</h3>
         <div class="sub-title">
-            <h4>Upcoming events</h4>
+            <h4>Contact</h4>
         </div>
             <div class="logo">
             <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
@@ -34,10 +34,10 @@
         </nav>
     </aside>
     <main class="contact">
-        <p class="bold flow-text">Email</p>
+        <span class="bold flow-text">Email</span>
         <p class="tab">Feel free to email us at: <a href="mailto:Nysl@chisoccer.org">Nysl@chisoccer.org</a> </p>
         <p class="tab">We will reply to your email as soon as we can.</p>
-        <p class="bold flow-text">Phone</p>
+        <span class="bold flow-text">Phone</span>
         <p class="tab">You may call us directly at (773)555-8984.</p>
         <p class="tab">As we are staffed mostly by volunteers, there is a good chance your call will not be picked up immediately. We recommend email as the preffered way of contacting us, but you may also leave us a brief voicemail with your name, number, and reason for calling and we will return your call.</p>
     </main>
