added a bit of responsiveness

--- a/Youth Soccer League Project/gameinfo.html
+++ b/Youth Soccer League Project/gameinfo.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> NYSL</title>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
+    <title> Game Info</title>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <h4>Game Info</h4>
         </div>
             <div class="logo">
-            <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
+            <img src="nysl_logo.png" alt="soccer ball">
         </div>
         </div>
     </header>
@@ -145,7 +146,7 @@
 
 
     </table>
-    <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1_3cCz8FSdVJ9qKhijqU900JsJTiyVIbB" width="540" height="480"></iframe>
+    <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1_3cCz8FSdVJ9qKhijqU900JsJTiyVIbB" ></iframe>
 
 
     </main>
