--- a/Youth Soccer League Project/registration.html
+++ b/Youth Soccer League Project/registration.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
     <title> Register</title>
 </head>
 
-<body>
+<body id="registration">
     <header>
         <div class="Logo-Container">
             <h3 class="title">Northside Youth Soccer League</h3>
@@ -18,7 +19,7 @@
                 <h4>Upcoming events</h4>
             </div>
             <div class="logo">
-                <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
+                <img src="nysl_logo.png" alt="soccer ball">
             </div>
         </div>
     </header>
@@ -35,7 +36,7 @@
 
     </aside>
     <main >
-        <form action="/show_data.html" method="get">
+        <form action="show_data.html" method="get">
             <div class="Container">
                 <div class="box1">
                     <label for="FirstName">FirstName</label>
@@ -69,7 +70,6 @@
                     <label for="E-mail">Email</label>
                     <input type="email" id="E-mail" name="E-mail">
                 </div>
-
                 <p>Which elementary schools do you live near?</p>
                 <div class="School">
 
