--- a/Youth Soccer League Project/about.html
+++ b/Youth Soccer League Project/about.html
@@ -4,9 +4,11 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> NYSL</title>
+    <title> About</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+<link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -18,7 +20,7 @@
             <h4>About NYSL </h4>
         </div>
             <div class="logo">
-            <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
+            <img src="./nysl_logo.png" alt="soccer ball">
         </div>
         </div>
     </header>
