--- a/Youth Soccer League Project/home.html
+++ b/Youth Soccer League Project/home.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> NYSL</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
+    <title> Home Page</title>
 </head>
 
 <body>
@@ -15,10 +16,10 @@
 
          <h3 class="title">Northside Youth Soccer League</h3>
         <div class="sub-title">
-            <h4>Upcoming events</h4>
+            <h4 >Upcoming events</h4>
         </div>
             <div class="logo">
-            <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
+            <img src="nysl_logo.png" alt="soccer ball">
         </div>
         </div>
 
@@ -26,7 +27,7 @@
     <aside>
         <nav class="menu">
             <a class="active" href="./home.html">Home</a>
-            <a href="./about.html">About NYSL</a>
+            <a href="about.html">About NYSL</a>
             <a href="./contact.html">Contact</a>
             <a href="./gameinfo.html">Game Info</a>
             <a href="./rules.html">Rules &amp; Policies</a>
