--- a/Youth Soccer League Project/rules.html
+++ b/Youth Soccer League Project/rules.html
@@ -4,6 +4,7 @@
     <title> NYSL</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <h4>Rules & Policies</h4>
         </div>
             <div class="logo">
-            <img src="./Assets/Stylesheets/nysl_logo.png" alt="soccer ball">
+            <img src="nysl_logo.png"soccer ball">
         </div>
         </div>
     </header>
